refactor: 파일 업로드, 조회 로직 리팩토링 - 연관 엔티티와 직접 연관관계를 갖지 않고, 내부적으로 fileType(엔티티), targetId(엔티티 Id)로 구분함 - 파일 저장 요청 시, 어느 엔티티를 위한 파일인지 fileType을 명시해야함